sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i
  var k : int=0
  while (k==0) {
  l=getValueCount()
    k=1
  	for (i <- 0 to l-2){
    	if(isSmaller(i,i+1)==true){
      	swap(i,i+1)
      	k=0
    	}
    }
  }
}